--- a/examesarbete.Rmd
+++ b/examesarbete.Rmd
@@ -26,3 +26,7 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
+install.packages("ggplot2")
+library(ggplot2)
