--- a/examesarbete.Rmd
+++ b/examesarbete.Rmd
@@ -30,3 +30,4 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 
 install.packages("ggplot2")
 library(ggplot2)
+jnkn
